# filefolder

./: LICENSE  README.md  pyproject.toml
filefolder/: __init__.py  core.py
tests/: test_core.py
