
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filefolder"
version = "0.2.0"
description = "File and folder object abstraction with metadata flattening"
authors = [{ name="Your Name", email="your@email.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "rich",
    "datefinder",
    "pywin32; platform_system == 'Windows'"
]

[tool.setuptools.packages.find]
where = ["."]
